fixed: intro video overlaps sticky header after hover

--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,7 @@ label{
     box-shadow: 0px 0px 5px grey;
     background-color: white;
     border-bottom: 2px solid rgb(194,194,194);
+    z-index: 1000;
 }
 .header h1{
     font-size: 2.5em;
@@ -108,6 +109,7 @@ label{
 .intro-video:hover{
     box-shadow: 2px 2px 5px grey;
     transform: translate(-1px, -2px);
+    
 }
 .intro a{
     color: black;
@@ -223,7 +225,6 @@ label{
 }
 .text-input:focus{
     transform: translate(-1px, -2px);
-    border: 2px solid black;
     box-shadow: 2px 2px 5px grey;
 }
 
@@ -261,7 +262,7 @@ label{
     position: fixed;
     top: 0;
     width: 100%;
-    box-shadow: 0px 0px 5px grey;;
+    box-shadow: 0px 0px 5px grey;
 }
 
 
